ui/tests/ui/wrong_num.stderr
error: expected 2 activities, but found 3
 --> tests/ui/wrong_num.rs:3:1
  |
3 | #[autodiff(d_square, Reverse, Duplicated, Const, Active)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `autodiff` (in Nightly builds, run with -Z macro-backtrace for more info)
